Fixed layout bug where the header would stretch vertically when more tweets were added or an error message ocurred while in desktop format

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -31,6 +31,6 @@
    margin-left: 1.5rem;
    justify-content: center;
    margin-right: 6.5rem;
-   margin-bottom: 15.5rem;
+   margin-bottom: 248px;
   }
  }; 
