--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -37,5 +37,6 @@ main {
  @media screen and (min-width: 1024px) {
   .master-container {
     display: flex;
+    align-items: flex-start;
   }
  }
